# Log-To-Yaml

./: .gitignore  README.md  requirements.txt  setup.cfg
src/LogToYaml/: log_to_yaml.py
