[metadata]
name = Log-To-Yaml
version = 1.0.0
author = John J Kenny
author_email = johnjkenny88@gmail.com
description = Converts log entries to entries in a yaml file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnjkenny/log-to-yaml
project_urls =
    Bug Tracker = https://github.com/johnjkenny/log-to-yaml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    Prettify-Logging
    PyYAML

[options.packages.find]
where = src
